--- a/conf/input.mysql/mysql.toml
+++ b/conf/input.mysql/mysql.toml
@@ -35,7 +35,7 @@ timeout_seconds = 3
 interval_times = 1
 
 # important! use global unique string to specify instance
-labels = { instance="n9e-10.2.3.4:3306" }
+labels = { instance="mysql-172.26.110.186:3306" }
 
 # Optional TLS Config
 use_tls = false
